// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders and fires the gold button action 1`] = `
<View
  style={
    [
      {
        "position": "relative",
      },
      false,
      {
        "transform": [
          {
            "scale": 1,
          },
        ],
      },
      [
        {
          "width": "100%",
        },
        undefined,
      ],
    ]
  }
>
  <View
    accessibilityLabel="Save deal"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": false,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "borderWidth": 0,
          "flexDirection": "row",
          "justifyContent": "center",
          "overflow": "hidden",
          "position": "relative",
        },
        {
          "backgroundColor": "#0E6E5C",
          "elevation": 3,
          "shadowColor": "#0A1F1B",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.08,
          "shadowRadius": 6,
        },
        {
          "borderRadius": 14,
          "minHeight": 56,
          "paddingHorizontal": 22,
        },
        false,
      ]
    }
  >
    <View
      pointerEvents="none"
      style={
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "backgroundColor": "#094B3F",
          },
          {
            "opacity": 0,
          },
        ]
      }
    />
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "center",
        }
      }
    >
      <Text
        maxFontSizeMultiplier={1.3}
        style={
          [
            {
              "color": "#16201E",
              "fontFamily": "HankenGrotesk_400Regular",
            },
            {
              "fontFamily": "HankenGrotesk_500Medium",
              "fontSize": 13,
              "lineHeight": 18,
            },
            false,
            false,
            [
              {
                "fontFamily": "HankenGrotesk_600SemiBold",
                "letterSpacing": -0.15,
              },
              {
                "color": "#F4FBF8",
                "fontSize": 16,
              },
            ],
          ]
        }
      >
        Save deal
      </Text>
    </View>
  </View>
</View>
`;

exports[`Button snapshots every variant so an unintended restyle is caught 1`] = `
<>
  <View
    style={
      [
        {
          "position": "relative",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          false,
          undefined,
        ],
      ]
    }
  >
    <View
      accessibilityLabel="gold"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "#0E6E5C",
            "elevation": 3,
            "shadowColor": "#0A1F1B",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 6,
          },
          {
            "borderRadius": 14,
            "minHeight": 56,
            "paddingHorizontal": 22,
          },
          false,
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#094B3F",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "color": "#16201E",
                "fontFamily": "HankenGrotesk_400Regular",
              },
              {
                "fontFamily": "HankenGrotesk_500Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              false,
              false,
              [
                {
                  "fontFamily": "HankenGrotesk_600SemiBold",
                  "letterSpacing": -0.15,
                },
                {
                  "color": "#F4FBF8",
                  "fontSize": 16,
                },
              ],
            ]
          }
        >
          gold
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "position": "relative",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          false,
          undefined,
        ],
      ]
    }
  >
    <View
      accessibilityLabel="ghost"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "#FFFFFF",
            "borderColor": "#CFCBC1",
            "borderWidth": 1,
            "elevation": 1,
            "shadowColor": "#0A1F1B",
            "shadowOffset": {
              "height": 1,
              "width": 0,
            },
            "shadowOpacity": 0.06,
            "shadowRadius": 2,
          },
          {
            "borderRadius": 14,
            "minHeight": 56,
            "paddingHorizontal": 22,
          },
          false,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "color": "#16201E",
                "fontFamily": "HankenGrotesk_400Regular",
              },
              {
                "fontFamily": "HankenGrotesk_500Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              false,
              false,
              [
                {
                  "fontFamily": "HankenGrotesk_600SemiBold",
                  "letterSpacing": -0.15,
                },
                {
                  "color": "#16201E",
                  "fontSize": 16,
                },
              ],
            ]
          }
        >
          ghost
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "position": "relative",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          false,
          undefined,
        ],
      ]
    }
  >
    <View
      accessibilityLabel="text"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "transparent",
          },
          {
            "borderRadius": 14,
            "minHeight": 56,
            "paddingHorizontal": 22,
          },
          false,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "color": "#16201E",
                "fontFamily": "HankenGrotesk_400Regular",
              },
              {
                "fontFamily": "HankenGrotesk_500Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              false,
              false,
              [
                {
                  "fontFamily": "HankenGrotesk_600SemiBold",
                  "letterSpacing": -0.15,
                },
                {
                  "color": "#0E6E5C",
                  "fontSize": 16,
                },
              ],
            ]
          }
        >
          text
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "position": "relative",
        },
        false,
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          false,
          undefined,
        ],
      ]
    }
  >
    <View
      accessibilityLabel="danger"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "#C0432B",
            "elevation": 3,
            "shadowColor": "#0A1F1B",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 6,
          },
          {
            "borderRadius": 14,
            "minHeight": 56,
            "paddingHorizontal": 22,
          },
          false,
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "color": "#16201E",
                "fontFamily": "HankenGrotesk_400Regular",
              },
              {
                "fontFamily": "HankenGrotesk_500Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              false,
              false,
              [
                {
                  "fontFamily": "HankenGrotesk_600SemiBold",
                  "letterSpacing": -0.15,
                },
                {
                  "color": "#F4FBF8",
                  "fontSize": 16,
                },
              ],
            ]
          }
        >
          danger
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "position": "relative",
        },
        {
          "opacity": 0.45,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          false,
          undefined,
        ],
      ]
    }
  >
    <View
      accessibilityLabel="loading"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": true,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "#0E6E5C",
            "elevation": 3,
            "shadowColor": "#0A1F1B",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 6,
          },
          {
            "borderRadius": 14,
            "minHeight": 56,
            "paddingHorizontal": 22,
          },
          {
            "opacity": 0.55,
          },
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#094B3F",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <ActivityIndicator
          color="#F4FBF8"
          size="small"
        />
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "color": "#16201E",
                "fontFamily": "HankenGrotesk_400Regular",
              },
              {
                "fontFamily": "HankenGrotesk_500Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              false,
              false,
              [
                {
                  "fontFamily": "HankenGrotesk_600SemiBold",
                  "letterSpacing": -0.15,
                },
                {
                  "color": "#F4FBF8",
                  "fontSize": 16,
                },
              ],
            ]
          }
        >
          loading
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "position": "relative",
        },
        {
          "opacity": 0.45,
        },
        {
          "transform": [
            {
              "scale": 1,
            },
          ],
        },
        [
          false,
          undefined,
        ],
      ]
    }
  >
    <View
      accessibilityLabel="disabled"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": false,
          "checked": undefined,
          "disabled": true,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "borderWidth": 0,
            "flexDirection": "row",
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "relative",
          },
          {
            "backgroundColor": "#0E6E5C",
            "elevation": 3,
            "shadowColor": "#0A1F1B",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.08,
            "shadowRadius": 6,
          },
          {
            "borderRadius": 14,
            "minHeight": 56,
            "paddingHorizontal": 22,
          },
          {
            "opacity": 0.55,
          },
        ]
      }
    >
      <View
        pointerEvents="none"
        style={
          [
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            {
              "backgroundColor": "#094B3F",
            },
            {
              "opacity": 0,
            },
          ]
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 8,
            "justifyContent": "center",
          }
        }
      >
        <Text
          maxFontSizeMultiplier={1.3}
          style={
            [
              {
                "color": "#16201E",
                "fontFamily": "HankenGrotesk_400Regular",
              },
              {
                "fontFamily": "HankenGrotesk_500Medium",
                "fontSize": 13,
                "lineHeight": 18,
              },
              false,
              false,
              [
                {
                  "fontFamily": "HankenGrotesk_600SemiBold",
                  "letterSpacing": -0.15,
                },
                {
                  "color": "#F4FBF8",
                  "fontSize": 16,
                },
              ],
            ]
          }
        >
          disabled
        </Text>
      </View>
    </View>
  </View>
</>
`;
